CP-72: persist renderer and grid settings in user profile
